--- a/example/package.json
+++ b/example/package.json
@@ -8,6 +8,9 @@
   },
   "author": "yarivsadan@gmail.com",
   "devDependencies": {
-    "next": "^10.0.2"
+    "@types/react": "^17.0.0",
+    "next": "^10.0.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   }
 }
