--- a/www/package.json
+++ b/www/package.json
@@ -12,6 +12,7 @@
     "googleapis": "^65.0.0",
     "next": "^10.0.2",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "tslog": "^3.0.0"
   }
 }
