--- a/www/ormconfig.json
+++ b/www/ormconfig.json
@@ -1,13 +1,12 @@
 {
-  "type": "pg",
+  "type": "postgres",
   "host": "localhost",
-  "port": 3306,
+  "port": "5432",
   "username": "",
   "password": "",
   "database": "devinprod",
   "synchronize": true,
   "logging": false,
-  "entities": ["src/entity/**/*.ts"],
   "migrations": ["src/migration/**/*.ts"],
   "subscribers": ["src/subscriber/**/*.ts"]
 }
