--- a/www/package.json
+++ b/www/package.json
@@ -5,15 +5,17 @@
   "main": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev src/main.ts"
+    "dev": "ts-node src/main.ts"
   },
   "author": "yarivsadan@gmail.com",
   "devDependencies": {
     "@types/koa": "^2.11.6",
+    "@types/next-auth": "^3.1.17",
     "@types/react": "^17.0.0",
     "googleapis": "^65.0.0",
     "koa": "^2.13.0",
     "next": "^10.0.2",
+    "next-auth": "^3.1.0",
     "pg": "^8.5.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
