--- a/www/tsconfig.json
+++ b/www/tsconfig.json
@@ -66,6 +66,6 @@
     "isolatedModules": true,
     "jsx": "preserve"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/model.js"],
   "exclude": ["node_modules"]
 }
