--- a/www/package.json
+++ b/www/package.json
@@ -10,12 +10,22 @@
   "author": "yarivsadan@gmail.com",
   "devDependencies": {
     "@types/koa": "^2.11.6",
+    "@types/koa-bodyparser": "^4.3.0",
+    "@types/koa-mount": "^4.0.0",
+    "@types/koa-router": "^7.4.1",
     "@types/next-auth": "^3.1.17",
+    "@types/oauth2-server": "^3.0.12",
     "@types/react": "^17.0.0",
     "googleapis": "^65.0.0",
     "koa": "^2.13.0",
+    "koa-bodyparser": "^4.3.0",
+    "koa-mount": "^4.0.0",
+    "koa-oauth-server": "^1.0.1",
+    "koa-router": "^10.0.0",
     "next": "^10.0.2",
     "next-auth": "^3.1.0",
+    "oauth2-server": "^3.1.1",
+    "oauth2-server-typescript": "^5.0.0-dev.3",
     "pg": "^8.5.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
