--- a/www/package.json
+++ b/www/package.json
@@ -9,6 +9,9 @@
   },
   "author": "yarivsadan@gmail.com",
   "devDependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.12.7",
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@types/jest": "^26.0.18",
     "@types/koa": "^2.11.6",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-mount": "^4.0.0",
@@ -17,6 +20,7 @@
     "@types/oauth2-server": "^3.0.12",
     "@types/react": "^17.0.0",
     "googleapis": "^65.0.0",
+    "jest": "^26.6.3",
     "koa": "^2.13.0",
     "koa-bodyparser": "^4.3.0",
     "koa-mount": "^4.0.0",
@@ -30,8 +34,10 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "reflect-metadata": "^0.1.13",
+    "ts-jest": "^26.4.4",
     "ts-node": "^9.0.0",
     "ts-node-dev": "^1.0.0",
-    "typeorm": "^0.2.29"
+    "typeorm": "^0.2.29",
+    "zod": "^1.11.11"
   }
 }
