--- a/www/tsconfig.json
+++ b/www/tsconfig.json
@@ -64,7 +64,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "react"
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/model.js"],
   "exclude": ["node_modules"]
