--- a/www/package.json
+++ b/www/package.json
@@ -18,6 +18,7 @@
     "@types/koa-router": "^7.4.1",
     "@types/next-auth": "^3.1.17",
     "@types/oauth2-server": "^3.0.12",
+    "@types/pg": "^7.14.7",
     "@types/react": "^17.0.0",
     "googleapis": "^65.0.0",
     "jest": "^26.6.3",
@@ -28,6 +29,7 @@
     "koa-router": "^10.0.0",
     "next": "^10.0.2",
     "next-auth": "^3.1.0",
+    "node-fetch": "^2.6.1",
     "oauth2-server": "^3.1.1",
     "oauth2-server-typescript": "^5.0.0-dev.3",
     "pg": "^8.5.1",
