--- a/sidecar/package.json
+++ b/sidecar/package.json
@@ -12,9 +12,11 @@
   "devDependencies": {
     "@types/http-proxy": "^1.17.4",
     "@types/koa": "^2.11.6",
+    "@types/ws": "^7.4.0",
     "http-proxy": "^1.18.1",
     "koa": "^2.13.0",
     "node-http-proxy": "^0.2.3",
-    "ts-node-dev": "^1.0.0"
+    "ts-node-dev": "^1.0.0",
+    "ws": "^7.4.1"
   }
 }
