--- a/www/package.json
+++ b/www/package.json
@@ -15,18 +15,23 @@
     "@types/koa": "^2.11.6",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-mount": "^4.0.0",
+    "@types/koa-route": "^3.2.4",
     "@types/koa-router": "^7.4.1",
+    "@types/koa-websocket": "^5.0.5",
     "@types/next-auth": "^3.1.17",
     "@types/oauth2-server": "^3.0.12",
     "@types/pg": "^7.14.7",
     "@types/react": "^17.0.0",
+    "@types/ws": "^7.4.0",
     "googleapis": "^65.0.0",
     "jest": "^26.6.3",
     "koa": "^2.13.0",
     "koa-bodyparser": "^4.3.0",
     "koa-mount": "^4.0.0",
     "koa-oauth-server": "^1.0.1",
+    "koa-route": "^3.2.0",
     "koa-router": "^10.0.0",
+    "koa-websocket": "^6.0.0",
     "next": "^10.0.2",
     "next-auth": "^3.1.0",
     "node-fetch": "^2.6.1",
@@ -40,6 +45,7 @@
     "ts-node": "^9.0.0",
     "ts-node-dev": "^1.0.0",
     "typeorm": "^0.2.29",
+    "ws": "^7.4.1",
     "zod": "^1.11.11"
   }
 }
