--- a/www/tsconfig.json
+++ b/www/tsconfig.json
@@ -58,11 +58,7 @@
     /* Advanced Options */
     "skipLibCheck": true /* Skip type checking of declaration files. */,
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */,
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "noEmit": true,
     "moduleResolution": "node",
@@ -74,9 +70,8 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    "src/model.js"
+    "src/model.js",
+    "../shared/src/log.ts"
   ],
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
