--- a/sidecar/package.json
+++ b/sidecar/package.json
@@ -12,11 +12,21 @@
   "devDependencies": {
     "@types/http-proxy": "^1.17.4",
     "@types/koa": "^2.11.6",
+    "@types/react": "^17.0.0",
     "@types/ws": "^7.4.0",
     "http-proxy": "^1.18.1",
     "koa": "^2.13.0",
+    "next": "^10.0.3",
     "node-http-proxy": "^0.2.3",
+    "react": "^17.0.1",
     "ts-node-dev": "^1.0.0",
     "ws": "^7.4.1"
+  },
+  "dependencies": {
+    "@types/jest": "^26.0.19",
+    "@types/node": "^14.14.14",
+    "@types/react-dom": "^17.0.0",
+    "react-dom": "^17.0.1",
+    "typescript": "^4.1.3"
   }
 }
