--- a/www/package.json
+++ b/www/package.json
@@ -5,7 +5,7 @@
   "main": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node src/main.ts"
+    "dev": "ts-node start.ts"
   },
   "author": "yarivsadan@gmail.com",
   "devDependencies": {
