--- a/devinprodlib/package.json
+++ b/devinprodlib/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "DevInProdShared",
+  "name": "dev-in-prod-lib",
   "version": "1.0.0",
   "description": "DevInProd shared classes",
   "main": "",
@@ -7,12 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "yarivsadan@gmail.com",
-  "devDependencies": {
+  "dependencies": {
     "@types/koa": "^2.11.6",
     "koa": "^2.13.1",
-    "next": "^10.0.5"
-  },
-  "dependencies": {
+    "next": "^10.0.5",
     "@types/react": "^17.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
