--- a/www/package.json
+++ b/www/package.json
@@ -8,7 +8,7 @@
     "dev": "ts-node start.ts"
   },
   "author": "yarivsadan@gmail.com",
-  "devDependencies": {
+  "dependencies": {
     "@babel/plugin-transform-react-jsx": "^7.12.7",
     "@babel/plugin-transform-runtime": "^7.12.1",
     "@types/jest": "^26.0.18",
@@ -46,6 +46,7 @@
     "ts-node-dev": "^1.0.0",
     "typeorm": "^0.2.29",
     "ws": "^7.4.1",
-    "zod": "^1.11.11"
+    "zod": "^1.11.11",
+    "dev-in-prod-lib": "1.0.0"
   }
 }
