--- a/www/package.json
+++ b/www/package.json
@@ -46,7 +46,6 @@
     "ts-node-dev": "^1.0.0",
     "typeorm": "^0.2.29",
     "ws": "^7.4.1",
-    "zod": "^1.11.11",
-    "dev-in-prod-lib": "1.0.0"
+    "zod": "^1.11.11"
   }
 }
