--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "private": true,
   "workspaces": [
-    "devinprodlib"
+    "lib",
+    "router",
+    "example",
+    "sidecar",
+    "localProxy"
   ]
 }
