--- a/example/package.json
+++ b/example/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "example",
+  "name": "dev-in-prod-example",
   "version": "1.0.0",
-  "description": "DevInProd Example App",
+  "description": "DevInProd Example",
   "main": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
