--- a/router/package.json
+++ b/router/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "devinprod",
+  "name": "dev-in-prod-router",
   "version": "1.0.0",
-  "description": "DevInProd App",
+  "description": "DevInProd Router",
   "main": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -46,6 +46,7 @@
     "ts-node-dev": "^1.0.0",
     "typeorm": "^0.2.29",
     "ws": "^7.4.1",
-    "zod": "^1.11.11"
+    "zod": "^1.11.11",
+    "dev-in-prod-lib": "1.0.0"
   }
 }
