--- a/integrationTests/package.json
+++ b/integrationTests/package.json
@@ -15,6 +15,9 @@
     "fetch": "^1.1.0",
     "http-terminator": "^2.0.3",
     "node-fetch": "^2.6.1",
-    "dev-in-prod-router": "1.0.0"
+    "dev-in-prod-router": "1.0.0",
+    "dev-in-prod-example": "1.0.0",
+    "dev-in-prod-local-proxy": "1.0.0",
+    "dev-in-prod-sidecar": "1.0.0"
   }
 }
