--- a/router/package.json
+++ b/router/package.json
@@ -9,8 +9,6 @@
   },
   "author": "yarivsadan@gmail.com",
   "dependencies": {
-    "@babel/plugin-transform-react-jsx": "^7.12.7",
-    "@babel/plugin-transform-runtime": "^7.12.1",
     "@types/jest": "^26.0.18",
     "@types/koa": "^2.11.6",
     "@types/koa-bodyparser": "^4.3.0",
@@ -23,6 +21,7 @@
     "@types/pg": "^7.14.7",
     "@types/react": "^17.0.0",
     "@types/ws": "^7.4.0",
+    "dev-in-prod-lib": "1.0.0",
     "googleapis": "^65.0.0",
     "jest": "^26.6.3",
     "koa": "^2.13.0",
@@ -46,7 +45,6 @@
     "ts-node-dev": "^1.0.0",
     "typeorm": "^0.2.29",
     "ws": "^7.4.1",
-    "zod": "^1.11.11",
-    "dev-in-prod-lib": "1.0.0"
+    "zod": "^1.11.11"
   }
 }
