--- a/router/package.json
+++ b/router/package.json
@@ -21,6 +21,7 @@
     "@types/pg": "^7.14.7",
     "@types/react": "^17.0.0",
     "@types/ws": "^7.4.0",
+    "cuid": "^2.1.8",
     "dev-in-prod-lib": "1.0.0",
     "googleapis": "^65.0.0",
     "jest": "^26.6.3",
