--- a/router/package.json
+++ b/router/package.json
@@ -49,7 +49,13 @@
     "zod": "^1.11.11"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-typescript": "^7.12.7",
     "@prisma/cli": "2.14.0",
-    "@types/next-auth": "^3.1.20"
+    "@types/jest": "^26.0.20",
+    "@types/next-auth": "^3.1.20",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.4.4",
+    "typescript": "^4.1.3"
   }
 }
