--- a/router/package.json
+++ b/router/package.json
@@ -7,10 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node start.ts"
   },
+  "jest": {
+    "testEnvironment": "node"
+  },
   "author": "yarivsadan@gmail.com",
   "dependencies": {
     "@prisma/client": "2.14.0",
-    "@types/jest": "^26.0.18",
+    "@prisma/migrate": "^2.14.0",
+    "@prisma/sdk": "^2.14.0",
     "@types/koa": "^2.11.6",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-mount": "^4.0.0",
@@ -23,8 +27,9 @@
     "@types/ws": "^7.4.0",
     "cuid": "^2.1.8",
     "dev-in-prod-lib": "1.0.0",
+    "dotenv": "^8.2.0",
+    "dotenv-cli": "^4.0.0",
     "googleapis": "^65.0.0",
-    "jest": "^26.6.3",
     "koa": "^2.13.0",
     "koa-bodyparser": "^4.3.0",
     "koa-mount": "^4.0.0",
@@ -41,6 +46,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "reflect-metadata": "^0.1.13",
+    "string-argv": "^0.3.1",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.0.0",
     "ts-node-dev": "^1.0.0",
@@ -49,10 +55,7 @@
     "zod": "^1.11.11"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-typescript": "^7.12.7",
     "@prisma/cli": "2.14.0",
-    "@types/jest": "^26.0.20",
     "@types/next-auth": "^3.1.20",
     "jest": "^26.6.3",
     "ts-jest": "^26.4.4",
