--- a/router/package.json
+++ b/router/package.json
@@ -52,7 +52,8 @@
     "ts-node-dev": "^1.0.0",
     "typeorm": "^0.2.29",
     "ws": "^7.4.1",
-    "zod": "^1.11.11"
+    "zod": "^1.11.11",
+    "typedApi": "1.0.0"
   },
   "devDependencies": {
     "@prisma/cli": "2.14.0",
