--- a/router/package.json
+++ b/router/package.json
@@ -50,10 +50,10 @@
     "ts-jest": "^26.4.4",
     "ts-node": "^9.0.0",
     "ts-node-dev": "^1.0.0",
+    "typedApi": "1.0.0",
     "typeorm": "^0.2.29",
     "ws": "^7.4.1",
-    "zod": "^1.11.11",
-    "typedApi": "1.0.0"
+    "zod": "^1.11.11"
   },
   "devDependencies": {
     "@prisma/cli": "2.14.0",
