--- a/integrationTests/package.json
+++ b/integrationTests/package.json
@@ -12,6 +12,7 @@
     "jest": "^26.6.3"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "fetch": "^1.1.0",
     "http-terminator": "^2.0.3",
     "node-fetch": "^2.6.1",
