--- a/router/package.json
+++ b/router/package.json
@@ -12,7 +12,7 @@
   },
   "author": "yarivsadan@gmail.com",
   "dependencies": {
-    "@prisma/client": "2.14.0",
+    "@prisma/client": "^2.15.0",
     "@prisma/migrate": "^2.14.0",
     "@prisma/sdk": "^2.14.0",
     "@types/koa": "^2.11.6",
@@ -46,6 +46,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "reflect-metadata": "^0.1.13",
+    "short-unique-id": "^3.2.3",
     "string-argv": "^0.3.1",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.0.0",
@@ -56,7 +57,7 @@
     "zod": "^1.11.11"
   },
   "devDependencies": {
-    "@prisma/cli": "2.14.0",
+    "@prisma/cli": "^2.15.0",
     "@types/next-auth": "^3.1.20",
     "jest": "^26.6.3",
     "ts-jest": "^26.4.4",
