--- a/typedApi/package.json
+++ b/typedApi/package.json
@@ -2,5 +2,8 @@
   "name": "typed-api",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "axios": "^0.21.1"
+  }
 }
