--- a/router/package.json
+++ b/router/package.json
@@ -12,6 +12,7 @@
   },
   "author": "yarivsadan@gmail.com",
   "dependencies": {
+    "@koa/router": "^10.0.0",
     "@prisma/client": "^2.15.0",
     "@prisma/migrate": "^2.14.0",
     "@prisma/sdk": "^2.14.0",
@@ -21,6 +22,7 @@
     "@types/koa-route": "^3.2.4",
     "@types/koa-router": "^7.4.1",
     "@types/koa-websocket": "^5.0.5",
+    "@types/koa__router": "^8.0.4",
     "@types/oauth2-server": "^3.0.12",
     "@types/pg": "^7.14.7",
     "@types/react": "^17.0.0",
@@ -30,7 +32,7 @@
     "dotenv": "^8.2.0",
     "dotenv-cli": "^4.0.0",
     "googleapis": "^65.0.0",
-    "koa": "^2.13.0",
+    "koa": "^2.13.1",
     "koa-bodyparser": "^4.3.0",
     "koa-mount": "^4.0.0",
     "koa-oauth-server": "^1.0.1",
@@ -51,10 +53,10 @@
     "ts-jest": "^26.4.4",
     "ts-node": "^9.0.0",
     "ts-node-dev": "^1.0.0",
+    "typed-api": "1.0.0",
     "typeorm": "^0.2.29",
     "ws": "^7.4.1",
-    "zod": "^1.11.11",
-    "typed-api": "1.0.0"
+    "zod": "^1.11.11"
   },
   "devDependencies": {
     "@prisma/cli": "^2.15.0",
