--- a/localProxy/package.json
+++ b/localProxy/package.json
@@ -26,8 +26,10 @@
   },
   "dependencies": {
     "@types/jest": "^26.0.19",
+    "@types/koa-router": "^7.4.1",
     "@types/node": "^14.14.14",
     "@types/react-dom": "^17.0.0",
+    "koa-router": "^10.0.0",
     "react-dom": "^17.0.1",
     "typescript": "^4.1.3"
   }
