--- a/localProxy/package.json
+++ b/localProxy/package.json
@@ -31,6 +31,7 @@
     "@types/react-dom": "^17.0.0",
     "koa-router": "^10.0.0",
     "react-dom": "^17.0.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "dev-in-prod-lib": "1.0.0"
   }
 }
