--- a/router/tsconfig.json
+++ b/router/tsconfig.json
@@ -66,6 +66,6 @@
     "isolatedModules": true,
     "jsx": "preserve"
   },
-  "include": ["**/*.ts", "**/*.tsx", "../localProxy/createRoute.ts", "../localProxy/createApplication.ts"],
+  "include": ["**/*.ts", "**/*.tsx", "../localProxy/createRoute.ts", "../localProxy/createApplication.ts", "../lib/src/testLib.ts"],
   "exclude": ["node_modules"]
 }
