--- a/router/package.json
+++ b/router/package.json
@@ -26,6 +26,7 @@
     "@types/pg": "^7.14.7",
     "@types/react": "^17.0.0",
     "@types/ws": "^7.4.0",
+    "co-body": "^6.1.0",
     "cuid": "^2.1.8",
     "dev-in-prod-lib": "1.0.0",
     "dotenv": "^8.2.0",
