--- a/router/package.json
+++ b/router/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "^2.15.0",
     "@prisma/migrate": "^2.14.0",
     "@prisma/sdk": "^2.14.0",
+    "@types/co-body": "^5.1.0",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-mount": "^4.0.0",
     "@types/koa-route": "^3.2.4",
