--- a/example/package.json
+++ b/example/package.json
@@ -18,6 +18,8 @@
     "@types/koa": "^2.11.6",
     "@types/koa-router": "^7.4.1",
     "koa": "^2.13.1",
-    "koa-router": "^10.0.0"
+    "koa-router": "^10.0.0",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
   }
 }
