--- a/example/Dockerfile
+++ b/example/Dockerfile
@@ -1,9 +1,10 @@
 FROM node:14
 
 WORKDIR /usr/src/app
-COPY package.json yarn.lock ./
-RUN yarn
 COPY . .
+#COPY lib ./dev-in-prod-lib
+COPY ../lib /tmp/lib
+RUN yarn add ./dev-in-prod-lib
+RUN yarn
 EXPOSE 3001
 CMD ["yarn", "ts-node", "main.ts"]
-
