--- a/example/package.json
+++ b/example/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@types/koa": "^2.11.6",
     "@types/koa-router": "^7.4.1",
+    "dev-in-prod-lib": "./lib",
     "koa": "^2.13.1",
     "koa-router": "^10.0.0",
     "ts-node": "^9.1.1",
