--- a/integrationTests/package.json
+++ b/integrationTests/package.json
@@ -20,6 +20,7 @@
     "dev-in-prod-example": "1.0.0",
     "dev-in-prod-local-proxy": "1.0.0",
     "dev-in-prod-sidecar": "1.0.0",
+    "dev-in-prod-lib": "1.0.0",
     "typed-api": "1.0.0"
   }
 }
