--- a/integrationTests/tsconfig.json
+++ b/integrationTests/tsconfig.json
@@ -66,12 +66,6 @@
     "isolatedModules": true,
     "jsx": "preserve"
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    "src/model.js",
-    "dev-in-prod-lib/src/log.ts"
-  ],
+  "include": ["**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
