--- a/localProxy/package.json
+++ b/localProxy/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^8.2.0",
     "koa-router": "^10.0.0",
     "react-dom": "^17.0.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "typed-api": "1.0.0"
   }
 }
