--- a/lib/package.json
+++ b/lib/package.json
@@ -6,7 +6,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "files": ["dist/"],
+  "files": [
+    "dist/"
+  ],
   "author": "yarivsadan@gmail.com",
-  "dependencies": {}
+  "dependencies": {
+    "@types/koa": "^2.11.7",
+    "koa": "^2.13.1"
+  }
 }
