--- a/router/package.json
+++ b/router/package.json
@@ -17,6 +17,7 @@
     "@prisma/migrate": "^2.14.0",
     "@prisma/sdk": "^2.14.0",
     "@types/co-body": "^5.1.0",
+    "@types/koa": "^2.11.7",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-mount": "^4.0.0",
     "@types/koa-route": "^3.2.4",
