--- a/example/Dockerfile
+++ b/example/Dockerfile
@@ -2,7 +2,7 @@ FROM node:14
 
 WORKDIR /usr/src/app
 COPY . .
-RUN yarn add ./dev-in-prod-lib
+RUN yarn add ./.docker_imports/dev-in-prod-lib
 RUN yarn
 EXPOSE 80
 CMD ["yarn", "ts-node", "exampleMain.ts"]
