--- a/example/package.json
+++ b/example/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@types/koa": "^2.11.7",
+    "@types/koa-logger": "^3.1.1",
     "@types/koa-router": "^7.4.1",
     "dev-in-prod-lib": "1.0.0",
     "koa": "^2.13.1",
