--- a/localProxy/package.json
+++ b/localProxy/package.json
@@ -24,14 +24,16 @@
   },
   "dependencies": {
     "@types/jest": "^26.0.19",
+    "@types/koa-logger": "^3.1.1",
     "@types/koa-router": "^7.4.1",
     "@types/node": "^14.14.14",
     "@types/react-dom": "^17.0.0",
     "dev-in-prod-lib": "1.0.0",
     "dotenv": "^8.2.0",
+    "koa-logger": "^3.2.1",
     "koa-router": "^10.0.0",
     "react-dom": "^17.0.1",
-    "typescript": "^4.1.3",
-    "typed-api": "1.0.0"
+    "typed-api": "1.0.0",
+    "typescript": "^4.1.3"
   }
 }
