--- a/router/package.json
+++ b/router/package.json
@@ -19,6 +19,7 @@
     "@types/co-body": "^5.1.0",
     "@types/koa": "^2.11.7",
     "@types/koa-bodyparser": "^4.3.0",
+    "@types/koa-logger": "^3.1.1",
     "@types/koa-mount": "^4.0.0",
     "@types/koa-route": "^3.2.4",
     "@types/koa-router": "^7.4.1",
@@ -36,6 +37,7 @@
     "koa": "^2.13.1",
     "koa-body": "^4.2.0",
     "koa-bodyparser": "^4.3.0",
+    "koa-logger": "^3.2.1",
     "koa-mount": "^4.0.0",
     "koa-oauth-server": "^1.0.1",
     "koa-route": "^3.2.0",
