--- a/devops/etc/nginx/sites-available/devinproddemo.com.conf
+++ b/devops/etc/nginx/sites-available/devinproddemo.com.conf
@@ -24,8 +24,8 @@ server {
     }
 
     # RSA certificate
-    ssl_certificate /etc/letsencrypt/live/devinproddemo.com-0002/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/devinproddemo.com-0002/privkey.pem; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/devinproddemo.com/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/devinproddemo.com/privkey.pem; # managed by Certbot
 
     include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
 }
@@ -38,16 +38,18 @@ server {
     server_name ~^www-rk.+\.devinproddemo\.com$;
 
     location / {
-      proxy_pass https://dsee.io;
+      proxy_pass http://localhost:3001;
       proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header Host $host;
-      proxy_set_header X-Forwarded-Host $proxy_add_x_forwarded_for;
-      proxy_set_header dev-in-prod-app-secret: asdf;
+      #proxy_set_header Host $host;
+      #proxy_set_header X-Forwarded-Host $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Host $host;
+      # TODO change
+      proxy_set_header dev-in-prod-app-secret cWiGjFhqq5M2tna0brBQMkcy735SZmVd9kriU0QI;
     }
 
     # RSA certificate
-    ssl_certificate /etc/letsencrypt/live/devinproddemo.com-0002/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/devinproddemo.com-0002/privkey.pem; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/devinproddemo.com/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/devinproddemo.com/privkey.pem; # managed by Certbot
 
     include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
 }
