--- a/devops/etc/nginx/sites-available/dsee.io.conf
+++ b/devops/etc/nginx/sites-available/dsee.io.conf
@@ -12,6 +12,14 @@ server {
 server {
     listen 443 ssl; # managed by Certbot
 
+    location /ws {
+      proxy_pass http://localhost:3001;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+      proxy_set_header Host $host;
+    }
+
     location / {
       proxy_pass http://localhost:3001;
       proxy_set_header X-Real-IP $remote_addr;
