--- a/router/package.json
+++ b/router/package.json
@@ -60,6 +60,7 @@
     "typed-api": "1.0.0",
     "typeorm": "^0.2.29",
     "ws": "^7.4.1",
+    "wscat": "^4.0.1",
     "zod": "^1.11.11"
   },
   "devDependencies": {
