--- a/example/package.json
+++ b/example/package.json
@@ -21,6 +21,7 @@
     "dev-in-prod-lib": "1.0.0",
     "koa": "^2.13.1",
     "koa-router": "^10.0.0",
+    "serverless-http": "^2.7.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   }
