--- a/router/.env_test
+++ b/router/.env_test
@@ -4,4 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL and SQLite.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres@localhost:5432/devinprod_test?schema=public"
+#DATABASE_URL="postgresql://postgres@localhost:5432/devinprod_test?schema=public"
+#DATABASE_URL="mysql://root:password@localhost:3306/envless"
