--- a/dbproxy/package.json
+++ b/dbproxy/package.json
@@ -6,8 +6,11 @@
   "dependencies": {
     "@types/mysql": "^2.15.17",
     "@types/node-sql-parser": "^1.1.0",
+    "flora-sql-parser": "^0.9.4",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
-    "node-sql-parser": "^3.1.0"
+    "node-sql-parser": "^3.1.0",
+    "portfinder": "^1.0.28",
+    "dev-in-prod-lib": "1.0.0"
   }
 }
