--- a/router/package.json
+++ b/router/package.json
@@ -31,6 +31,7 @@
     "@types/ws": "^7.4.0",
     "co-body": "^6.1.0",
     "cuid": "^2.1.8",
+    "dev-in-prod-db-proxy": "1.0.0",
     "dotenv": "^8.2.0",
     "dotenv-cli": "^4.0.0",
     "googleapis": "^65.0.0",
@@ -43,6 +44,7 @@
     "koa-route": "^3.2.0",
     "koa-router": "^10.0.0",
     "koa-websocket": "^6.0.0",
+    "mysql2": "^2.2.5",
     "next": "^10.0.2",
     "next-auth": "^3.1.0",
     "node-fetch": "^2.6.1",
