--- a/router/.env_test
+++ b/router/.env_test
@@ -5,4 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 #DATABASE_URL="postgresql://postgres@localhost:5432/devinprod_test?schema=public"
-#DATABASE_URL="mysql://root:password@localhost:3306/envless"
+#DATABASE_URL="mysql://root:password@localhost:3306/devinprod_test"
