--- a/example/package.json
+++ b/example/package.json
@@ -15,12 +15,17 @@
     "react-dom": "^17.0.1"
   },
   "dependencies": {
+    "@types/escape-html": "^1.0.0",
     "@types/koa": "^2.11.7",
     "@types/koa-logger": "^3.1.1",
     "@types/koa-router": "^7.4.1",
+    "@types/react": "^17.0.2",
     "dev-in-prod-lib": "1.0.0",
+    "escape-html": "^1.0.3",
     "koa": "^2.13.1",
     "koa-router": "^10.0.0",
+    "mysql2": "^2.2.5",
+    "react": "^17.0.1",
     "serverless-http": "^2.7.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
