--- a/example/package.json
+++ b/example/package.json
@@ -25,6 +25,7 @@
     "koa": "^2.13.1",
     "koa-router": "^10.0.0",
     "mysql2": "^2.2.5",
+    "nodemon": "^2.0.7",
     "react": "^17.0.1",
     "serverless-http": "^2.7.0",
     "ts-node": "^9.1.1",
