--- a/devops/etc/nginx/sites-available/devinproddemo.com.conf
+++ b/devops/etc/nginx/sites-available/devinproddemo.com.conf
@@ -35,7 +35,7 @@ server {
 
     root /var/www/html;
 
-    server_name ~^www-rk.+\.devinproddemo\.com$;
+    server_name ~^www-.+\.devinproddemo\.com$;
 
     location / {
       proxy_pass http://localhost:3001;
