--- a/typedApi/package.json
+++ b/typedApi/package.json
@@ -5,6 +5,8 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.21.1",
-    "koa": "^2.13.1"
+    "koa": "^2.13.1",
+    "koa-router": "^10.0.0",
+    "portfinder": "^1.0.28"
   }
 }
