--- a/typedApi/package.json
+++ b/typedApi/package.json
@@ -4,9 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.21.1",
     "koa": "^2.13.1",
-    "koa-router": "^10.0.0",
+    "koa-router": "^10.0.0"
+  },
+  "devDependencies": {
     "portfinder": "^1.0.28"
   }
 }
