--- a/typedApi/tsconfig.json
+++ b/typedApi/tsconfig.json
@@ -14,7 +14,7 @@
     "sourceMap": true /* Generates corresponding '.map' file. */,
     //"emitDeclarationOnly": true,
     // "outFile": "./",                       /* Concatenate and emit output to single file. */
-    //"outDir": "dist" /* Redirect output structure to the directory. */,
+    "outDir": "dist" /* Redirect output structure to the directory. */,
     //"rootDir": "./" /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */,
     // "composite": true,                     /* Enable project compilation */
     // "tsBuildInfoFile": "./",               /* Specify file to store incremental compilation information */
@@ -59,13 +59,8 @@
     /* Advanced Options */
     "skipLibCheck": true /* Skip type checking of declaration files. */,
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */,
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "allowJs": true,
     "noEmit": false,
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "jsx": "preserve"
+    "resolveJsonModule": true
   },
   "include": ["**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
