--- a/typedApi/tsconfig.json
+++ b/typedApi/tsconfig.json
@@ -62,6 +62,6 @@
     "noEmit": false,
     "resolveJsonModule": true
   },
-  "include": ["**/*.ts", "**/*.tsx"],
+  "include": ["src/**/*.ts", "src/**/*.tsx"],
   "exclude": ["node_modules"]
 }
