--- a/router/package.json
+++ b/router/package.json
@@ -36,6 +36,7 @@
     "dotenv": "^8.2.0",
     "dotenv-cli": "^4.0.0",
     "googleapis": "^65.0.0",
+    "infer-rpc": "^1.0.2",
     "koa": "^2.13.1",
     "koa-body": "^4.2.0",
     "koa-bodyparser": "^4.3.0",
