--- a/typedApi/package.json
+++ b/typedApi/package.json
@@ -1,13 +1,37 @@
 {
-  "name": "typed-api",
+  "name": "solid-rpc",
   "version": "1.0.0",
-  "main": "index.js",
   "license": "MIT",
+  "description": "A library for statically typed and validated RPC clients and servers",
+  "scripts": {
+    "build": "tsc",
+    "test": "jest"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/yariv/SolidRPC"
+  },
+  "keywords": [
+    "Typescript",
+    "RPC"
+  ],
+  "homepage": "https://github.com/yariv/SolidRPC",
   "dependencies": {
     "koa": "^2.13.1",
     "koa-router": "^10.0.0"
   },
   "devDependencies": {
-    "portfinder": "^1.0.28"
-  }
+    "@types/jest": "^26.0.20",
+    "@types/koa": "^2.13.1",
+    "@types/koa-router": "^7.4.1",
+    "@types/next": "^9.0.0",
+    "jest": "^26.6.3",
+    "portfinder": "^1.0.28",
+    "typescript": "^4.2.3"
+  },
+  "files": [
+    "dist/**/*"
+  ],
+  "types": "dist/index.d.ts",
+  "author": "Yariv Sadan"
 }
