--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "DevInProd",
   "main": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "gen-prisma": "prisma generate --schema router/prisma/schema.prisma && prisma db push --preview-feature --schema router/prisma/schema.prisma",
+    "router": "ts-node router/routerMain.ts"
   },
   "jest": {
     "testEnvironment": "node"
@@ -15,21 +17,6 @@
     "@prisma/client": "^2.15.0",
     "@prisma/migrate": "^2.14.0",
     "@prisma/sdk": "^2.14.0",
-    "@types/co-body": "^5.1.0",
-    "@types/escape-html": "^1.0.0",
-    "@types/koa": "^2.13.1",
-    "@types/koa-bodyparser": "^4.3.0",
-    "@types/koa-logger": "^3.1.1",
-    "@types/koa-mount": "^4.0.0",
-    "@types/koa-route": "^3.2.4",
-    "@types/koa-router": "^7.4.1",
-    "@types/koa-websocket": "^5.0.5",
-    "@types/koa__router": "^8.0.4",
-    "@types/node-fetch": "^2.5.8",
-    "@types/oauth2-server": "^3.0.12",
-    "@types/pg": "^7.14.7",
-    "@types/react": "^17.0.0",
-    "@types/ws": "^7.4.0",
     "co-body": "^6.1.0",
     "cuid": "^2.1.8",
     "dotenv": "^8.2.0",
@@ -72,6 +59,21 @@
   "devDependencies": {
     "@prisma/cli": "^2.15.0",
     "@types/next-auth": "^3.1.20",
+    "@types/co-body": "^5.1.0",
+    "@types/escape-html": "^1.0.0",
+    "@types/koa": "^2.13.1",
+    "@types/koa-bodyparser": "^4.3.0",
+    "@types/koa-logger": "^3.1.1",
+    "@types/koa-mount": "^4.0.0",
+    "@types/koa-route": "^3.2.4",
+    "@types/koa-router": "^7.4.1",
+    "@types/koa-websocket": "^5.0.5",
+    "@types/koa__router": "^8.0.4",
+    "@types/node-fetch": "^2.5.8",
+    "@types/oauth2-server": "^3.0.12",
+    "@types/pg": "^7.14.7",
+    "@types/react": "^17.0.0",
+    "@types/ws": "^7.4.0",
     "jest": "^26.6.3",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.3"
