--- a/devops/etc/nginx/sites-available/devinproddemo.com.conf
+++ b/devops/etc/nginx/sites-available/devinproddemo.com.conf
@@ -44,7 +44,7 @@ server {
       #proxy_set_header X-Forwarded-Host $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Host $host;
       # TODO change
-      proxy_set_header dev-in-prod-app-secret cWiGjFhqq5M2tna0brBQMkcy735SZmVd9kriU0QI;
+      proxy_set_header dev-in-prod-routing-secret cWiGjFhqq5M2tna0brBQMkcy735SZmVd9kriU0QI;
     }
 
     # RSA certificate
