--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "",
   "scripts": {
     "test": "jest",
-    "gen-prisma": "prisma generate --schema router/prisma/schema.prisma && prisma db push --preview-feature --schema router/prisma/schema.prisma",
-    "router": "ts-node router/routerMain.ts",
+    "gen-prisma": "prisma generate --schema wsProxy/prisma/schema.prisma && prisma db push --preview-feature --schema wsProxy/prisma/schema.prisma",
+    "wsProxy": "ts-node wsProxy/wsProxy.ts",
     "example": "ts-node example/src/exampleMain.ts",
     "localProxy": "ts-node localProxy/localProxyMain.ts"
   },
